[metadata]
author = Eugen Hotaj 
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
description = An efficient AutoML system for automating boring decisions.
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = daas
url = https://github.com/EugenHotaj/daas

[options]
include_package_data = True
install_requires =
    cryptography
    google-api-python-client
    lightgbm
    numpy
    openml
    pandas
    ray[default]
    ray[serve]
    scipy
    sklearn
packages = find:
python_requires = >=3.9
